added extra features

--- a/boggle.html
+++ b/boggle.html
@@ -20,6 +20,7 @@
           value=" Enter "
           onclick="addWord()"
         />
+        <p><span id="warn" class="warn-duplicate">Duplicate Entry!</span></p>
       </div>
       <div class="grid-3">
         <div>Words Found</div>
