--- a/boggle.html
+++ b/boggle.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <title>Boggle</title>
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" type="text/css" href="boggle.css" />
     <script src="jquery-2.1.0.js"></script>
     <script src="boggle.js"></script>
